# analytics-platform-control-panel

./: .coveragerc  .dockerignore  .flake8  .git-blame-ignore-revs  .gitignore  .jshintignore  .jsonlintignore  .pre-commit-config.yaml  .trivyignore  CHANGELOG.md  Dockerfile  Dockerfile_EKS  Jenkinsfile  Makefile  Makefile.local  Makefile.local.mk  README.md  celery_worker.sh  create_user  current_status_of_spike.md  deploy.json  docker-compose.dev.yaml  docker-compose.test.yml  docker-compose.yaml  docker-compose.yml  helm-repositories.yaml  install-dependencies.sh  jest.config.js  k8s.py  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt  run_api  run_tests  settings.yaml  setup.cfg  (+1 more)
.circleci/: config.yml
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: CODEOWNERS  build-and-test.yml  codeql-analysis.yml  create-release.yaml  dependency-review.yml  enforce-version-pinning.yml  release.yml  scan.yml  super-linter.yml  sync-repo.yaml  test-and-push-docker-image.yaml  test.yml
contrib/: docker-compose-postgres.yml  docker-compose-redis.yml  docker-compose-test.yml
control_panel_api/: auth0.py  authentication.py  aws.py  concourse.py  elasticsearch.py  exceptions.py  filters.py  helm.py  k8s.py  k8s_patch.py  models.py  pagination.py  permissions.py  serializers.py  services.py  settings.py  tools.py  urls.py  utils.py  validators.py  views.py  wsgi.py
control_panel_api/management/commands/: add_oidc_statement_to_users_roles.py  dry_runnable.py  grant_aws_roles_permission_to_read_inline_policies.py  import_k8s_users.py  load_kube_users.py  migrate_lambda_data_0_dump_user_policies.py  migrate_lambdas_data_1_buckets.py  migrate_lambdas_data_2_users3buckets.py  migrate_lambdas_data_utils.py  migrate_s3_access_roles_to_inline_policies.py
control_panel_api/migrations/: 0001_initial.py  0002_app_description.py  0002_auto_20170816_1525.py  0003_auto_20170817_0953.py  0003_user_email_verified.py  0003_user_verified_email.py  0004_s3bucket_is_data_warehouse.py  0004_user_name.py  0005_auto_20170825_1250.py  0005_auto_20170825_1445.py  0005_s3bucket_url.py  0006_auto_20170825_1424.py  0006_auto_20170825_1542.py  0007_s3bucket.py  0008_auto_20170904_1309.py  0009_auto_20170904_1511.py  0009_auto_20170905_1004.py  0010_auto_20170906_1501.py  0011_auto_20170927_1449.py  0011_auto_20170928_1552.py  0012_auto_20170928_1029.py  0013_merge_20171002_1228.py  0014_auto_20171004_1125.py  0015_auto_20171006_1511.py  0016_auto_20171009_1009.py  0017_auto_20171009_1159.py  0018_auto_20171012_1012.py  0019_auto_20171012_1128.py
control_panel_api/settings/: base.py  test.py
control_panel_api/tests/: __init__.py  iam_test_cases.py  test_authentication.py  test_aws.py  test_aws_s3_access_policy.py  test_concourse.py  test_filters.py  test_models.py  test_pagination.py  test_permissions.py  test_services.py  test_tools.py  test_validators.py  test_views.py
control_panel_api/tests/filters/: test_app_filter.py  test_apps3bucket_filter.py  test_s3bucket_filter.py  test_user_filter.py  test_users3bucket_filter.py
control_panel_api/tests/fixtures/: es.py
control_panel_api/tests/permissions/: test_app_permissions.py  test_k8s_permissions.py  test_s3bucket_permissions.py  test_tooldeployment_permissions.py  test_user_permissions.py  test_users3bucket_permissions.py
controlpanel/: asgi.py  celery.py  jwt.py  oidc.py  routing.py  urls.py  utils.py  wsgi.py
controlpanel-js-utils/: Dockerfile
controlpanel/api/: __init__.py  admin.py  apps.py  auth0.py  aws.py  aws_auth.py  cluster.py  elasticsearch.py  exceptions.py  filters.py  github.py  helm.py  jwt_auth.py  kubernetes.py  message_broker.py  metrics.py  models.py  pagerduty.py  pagination.py  permissions.py  rules.py  serializers.py  services.py  signals.py  slack.py  tasks.py  tools.py  urls.py  validators.py
controlpanel/api/dtos/: folders.py
controlpanel/cli/: apps.py
controlpanel/develop/: apps.py  urls.py  views.py
controlpanel/frontend/: apps.py  consumers.py  filters.py  forms.py  jinja2.py  mixins.py  routing.py  tasks.py  urls.py
controlpanel/kubeapi/: apps.py  oidc_patch.py  permissions.py  urls.py  views.py
controlpanel/middleware/: __init__.py  current_request.py  legacy_api_redirect.py  migrate_alert.py  never_cache.py
controlpanel/settings/: __init__.py  common.py  development.py  test.py
controlpanel/webhooks/: urls.py  views.py
doc/: architecture.md  auth_flows.md  data_structure.md  docker.md  environment.md  errors.md  feature-flags.md  frontend.md  lambda_function_example.py  launch.json.example  running-devcontainer.md  running.md  tasks.json.example
docker/: helm-repositories.yaml  nginx.conf
jenkinsfiles/: create_user.groovy  delete_user.groovy  deploy_rstudio_for_user.groovy  grant_access_to_app.groovy
moj_analytics/: __init__.py  auth0_client.py
moj_analytics/tests/: conftest.py  test_auth0_client.py
scripts/: README.md  create_aws_conf.py  create_user  delete_user  deploy_rstudio  grant_access  load_dev_tools.py  load_dev_tools.sh  prepare_dev_tools.py  replace_aws_iam_command.py  run_tests.sh  startup_dev.sh  startup_dev_frontend.sh  startup_dev_migration.sh  startup_dev_worker.sh  version_buckets.py
scripts/container/: entrypoint.sh
scripts/devcontainer/: add-git-secrets.sh  post-create.sh  post-start.sh
tests/: conftest.py  kubeconfig  test_migrations.py  test_oidc.py  test_utils.py
tests/api/: conftest.py  test_admin.py  test_auth0.py  test_authentication.py  test_aws.py  test_aws_s3_access_policy.py  test_bucket_policies.py  test_github.py  test_helm.py  test_kubernetes.py  test_pagerduty.py  test_pagination.py  test_prometheus.py  test_serializer.py  test_services.py  test_slack.py  test_tools.py  test_validators.py
tests/cli/: test_add_app_user_command.py
tests/frontend/: test_consumers.py  test_forms.py  test_mixins.py
tests/kubeapi/: test_permissions.py
tests/users/: test_can_list_users.py
tests/webhooks/: test_views.py
(+511 files in other folders)
