[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
)/
'''

[tool.isort]
import_heading_firstparty = 'First-party/Local'
import_heading_future = 'Future'
import_heading_stdlib = 'Standard library'
import_heading_thirdparty = 'Third-party'
line_length = 88
multi_line_output = 3
no_lines_before = 'LOCALFOLDER'
profile = 'black'

[tool.poetry]
name = "analytics-platform-control-panel"
version = "v0.29.25"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "analytics_platform_control_panel"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "3.2.15"
auth0-python = "3.13.0"
boto3 = "1.20.13"
channels = "2.4.0"
channels-redis = "3.3.1"
django-crequest = "2018.5.11"
django-extensions = "3.1.5"
django-filter = "2.4.0"
django-prometheus = "2.1.0"
django-redis = "4.12.1"
django-simple-history = "3.1.1"
djangorestframework = "3.12.4"
django-structlog = "2.2.0"
djproxy = "2.3.5"
elasticsearch-dsl = "7.2.1"
gunicorn = "20.1.0"
jinja2 = "2.11.3"
kubernetes = "11.0.0"
markupsafe = "2.0.1"
model-mommy = "2.0.0"
moto = "1.3.14"
mozilla-django-oidc = "2.0.0"
psycopg2-binary = "2.9.3"
pygithub = "1.53"
pytest = "6.0.1"
pytest-django = "3.9.0"
python-jose = "3.3.0"
rules = "3.0"
sentry-sdk = "1.5.1"
slackclient = "2.8.1"
urllib3 = "1.26.5"
pyyaml = "6.0"
uvicorn = {version = "0.17.5", extras = ["standard"]}
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
