[project]
name = "controlpanel"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "asgiref==3.11.0",
    "auth0-python==4.13.0",
    "authlib==1.6.9",
    "autobahn==25.12.2",
    "beautifulsoup4==4.14.3",
    "boto3==1.42.73",
    "celery[sqs]==5.6.2",
    "channels==4.3.2",
    "channels-redis==4.3.0",
    "cryptography==46.0.6",
    "daphne==4.2.1",
    "Django==5.2.12",
    "django-celery-beat==2.9.0",
    "django-crequest==2018.5.11",
    "django-extensions==4.1",
    "django-filter==25.2",
    "django-prometheus==2.4.1",
    "django-redis==6.0.0",
    "django-simple-history==3.11.0",
    "django-structlog==10.0.0",
    "djangorestframework==3.16.1",
    "djproxy==2.3.6",
    "elasticsearch-dsl==7.4.1",
    "gunicorn==25.1.0",
    "Jinja2==3.1.6",
    "kubernetes==35.0.0",
    "MarkupSafe==3.0.3",
    "mozilla-django-oidc==5.0.2",
    "notifications-python-client==10.0.1",
    "pagerduty==6.1.0",
    "psycopg2-binary==2.9.11",
    "PyJWT==2.12.0",
    "PyNaCl==1.6.2",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
    "rules==3.5",
    "sentry-sdk==2.57.0",
    "slackclient==2.9.4",
    "urllib3==2.6.3",
    "uvicorn[standard]==0.42.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar==4.4.6",
    "ipdb==0.13.13",
    "ipython==9.10.0",
    "numpy==1.26.4",
    "pandas==2.3.3",
    "pipdeptree==2.30.0",
    "pre-commit==4.5.1",
    "pylint==3.3.9",
    "pylint-django==2.7.0",
    "model-bakery==1.21.0",
    "moto[all]==5.1.21",
    "pytest==9.0.2",
    "pytest-django==4.12.0",
    "pytest-xdist==3.8.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "controlpanel.settings.test"
norecursedirs = ".circleci .git .github .mypy_cache controlpanel doc docker node_modules run static venv"
markers = [
    "indevelopment: for tests currently being worked on",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    "env",
    "venv",
    "**/migrations/**",
]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "B", "I"]
ignore = [
    "E203",  # whitespace before ':'
    "E266",  # block comment should start with '# '
    "F403",  # star imports
    "F401",  # imported but unused
]
per-file-ignores = { "controlpanel/api/migrations/*" = ["E501", "W292"], "controlpanel/api/cluster.py" = ["E501"] }

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.uv]
exclude-newer = "1 week"
